infrastructure/gitops/kind/base/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: tools
spec:
  selector:
    app: excalidraw
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
