infrastructure/gitops/kind/base/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: tools
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: draw.macula.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: excalidraw
            port:
              number: 80
